new method GetExtantDocument. bug 36016 r=hyatt,pinkerton